setup nginx reverse proxy for asp.net core apps/automate ci-cd pipeline and deployments with azure devops/create ci-cd pipelines for aks/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-restapp
  namespace: ingress
  labels:
    app: backend-restapp
    tier: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-restapp
  template:
    metadata:
      labels:
        app: backend-restapp
        tier: backend 
    spec: 
      containers:
        - name: backend-restapp
          image: crdvsaksdevfc01.azurecr.io/mydotnetappdemo:#{Build.BuildId}#
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: my-backend-service ## VERY VERY IMPORTANT - NGINX PROXYPASS needs this name
  labels:
    app: backend-restapp
    tier: backend
spec:
  selector:
    app: backend-restapp
  ports:
    - name: http
      port: 5000 # ClusterIP Service Port
      targetPort: 5000 # Container Port
  type: ClusterIP
