setup nginx reverse proxy for asp.net core apps/automate ci-cd pipeline and deployments with azure devops/create ci-cd pipelines for aks/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp
  namespace: ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: my-backend-service
            port:
              number: 5000
        path: /
        pathType: Prefix
      - backend:
          service:
            name: my-backend-service
            port:
              number: 5000
        path: /acr(/|$)(.*)
        pathType: Prefix
  - host: himhelloworld.com
    http:
      paths:
      - backend:
          service:
            name: my-backend-service
            port: 
              number: 5000
        path: /
        pathType: Prefix
      - backend:
          service:
            name: my-backend-service
            port: 
              number: 5000
        path: /acr
        pathType: Prefix
